--- a/log4j2/pom.xml
+++ b/log4j2/pom.xml
@@ -8,16 +8,20 @@
   <name>example.log4j2</name>
   <url>http://maven.apache.org</url>
 
+  <properties>
+    <log4j.version>2.13.3</log4j.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>2.6.2</version>
+      <version>${log4j.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>2.6.2</version>
+      <version>${log4j.version}</version>
     </dependency>
   </dependencies>
   
